<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="25dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="362dp"
        android:layout_height="71dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:src="@mipmap/logo" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/border"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border"
        android:padding="10dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_password_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textSize="12sp"
        android:textStyle="" />

    <Button
        android:id="@+id/button2"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/rectangle_3_ek2_color"
        android:padding="10dp"
        android:text="@string/facebook"
        android:textColor="@color/_bg__connexion_fb_ek2_color" />

    <Button
        android:id="@+id/button3"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border"
        android:backgroundTint="#EC407A"
        android:padding="10dp"
        android:text="@string/instagram"
        android:textColor="@color/_bg__connexion_fb_ek2_color" />

    <Button
        android:id="@+id/bt_signin"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/border"
        android:padding="10dp"
        android:text="@string/signin" />

    <TextView
        android:id="@+id/tv_no_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/no_account" />

    <TextView
        android:id="@+id/tv_become_baker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/become_baker" />

</LinearLayout>
