<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:padding="25dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/signin_title"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_signin_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/border"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et_signin_firstname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et_signin_nickname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et_signin_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et_signin_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et_signin_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et_signin_password_comfirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/passwordComfirm"
        android:inputType="textPassword"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Distance:" />

    <SeekBar
        android:id="@+id/sb_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:indeterminate="false"
        android:max="20"
        android:progressTint="@color/colorAccent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Mentions légales"
        android:textColor="#000000" />

    <Button
        android:id="@+id/bt_modif"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/rectangle_3_ek4_color"
        android:padding="10dp"
        android:text="@string/valider" />

</LinearLayout>
