<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/BottomNav"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/rectangle_3_ek4_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_signin"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_all_cakes"
        android:layout_width="411dp"
        android:layout_height="130dp"
        android:layout_marginTop="100dp"
        app:cardBackgroundColor="#D0D58D8D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView32"
            android:layout_width="match_parent"
            android:layout_height="297dp"
            android:src="@mipmap/photo_2020_04_16_19_22_47" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#48000000"
            android:gravity="center"
            android:text="@string/all_cakes_str"
            android:textColor="@color/_bg__connexion_fb_ek2_color"
            android:textSize="25sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_signin"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="#D08DD5D5"
        app:layout_constraintTop_toBottomOf="@+id/cv_bakers"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView41"
            android:layout_width="match_parent"
            android:layout_height="177dp"
            android:src="@mipmap/ben_kolde_fapxz88yzrw_unsplash" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4D000000"
            android:gravity="center"
            android:text="@string/signin"
            android:textColor="@color/_bg__connexion_fb_ek2_color"
            android:textSize="25sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_bakers"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="#D0A3D58D"
        app:layout_constraintTop_toBottomOf="@+id/cv_custom_orders"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView40"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@mipmap/depositphotos_79327042_l_2015" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="#4D000000"
            android:gravity="center"
            android:text="@string/our_bakers"
            android:textColor="@color/_bg__connexion_fb_ek2_color"
            android:textSize="25sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_custom_orders"
        android:layout_width="411dp"
        android:layout_height="130dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="#D0D5A68D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_all_cakes">

        <ImageView
            android:id="@+id/imageView33"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:src="@mipmap/heather_barnes__tn1m5r1pfi_unsplash" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4D000000"
            android:gravity="center"
            android:text="@string/questions_str"
            android:textColor="@color/_bg__connexion_fb_ek2_color"
            android:textSize="25sp" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="127dp"
        android:layout_height="71dp"
        android:src="@mipmap/fouet_1"
        app:layout_constraintBottom_toTopOf="@+id/cv_all_cakes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>