<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/rectangle_3_ek4_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_all_cakes"
        android:layout_width="411dp"
        android:layout_height="130dp"
        app:cardBackgroundColor="#D0D58D8D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13">

        <ImageView
            android:id="@+id/imageView31"
            android:layout_width="match_parent"
            android:layout_height="297dp"
            android:layout_gravity="center"
            android:src="@mipmap/photo_2020_04_16_19_22_47" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4D000000"
            android:gravity="center"
            android:text="@string/all_cakes"
            android:textColor="@color/_bg__connexion_fb_ek2_color"
            android:textSize="25sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_my_orders"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="#D08DD5D5"
        app:layout_constraintTop_toBottomOf="@+id/cv_bakers"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView44"
            android:layout_width="match_parent"
            android:layout_height="171dp"
            android:layout_gravity="center"
            android:src="@mipmap/leone_venter_viem9bdzkfo_unsplash" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4D000000"
            android:gravity="center"
            android:text="MES COMMANDES"
            android:textColor="@color/_bg__connexion_fb_ek2_color"
            android:textSize="25sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_bakers"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="#D0A3D58D"
        app:layout_constraintTop_toBottomOf="@+id/cv_custom_orders"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView43"
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:layout_gravity="center"
            android:src="@mipmap/depositphotos_79327042_l_2015" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="#4D000000"
            android:gravity="center"
            android:text="@string/bakers"
            android:textColor="@color/_bg__connexion_fb_ek2_color"
            android:textSize="25sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_custom_orders"
        android:layout_width="411dp"
        android:layout_height="130dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="9dp"
        app:cardBackgroundColor="#D0D5A68D"
        app:layout_constraintBottom_toTopOf="@+id/cv_bakers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_all_cakes">

        <ImageView
            android:id="@+id/imageView42"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:src="@mipmap/heather_barnes__tn1m5r1pfi_unsplash" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4D000000"
            android:gravity="center"
            android:text="@string/questions"
            android:textColor="@color/_bg__connexion_fb_ek2_color"
            android:textSize="25sp" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="276dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/logowhipit"
        app:layout_constraintBottom_toTopOf="@+id/cv_all_cakes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>